<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/ic_background121" >
<ScrollView
     
    android:id="@+id/textAreaScroller" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:scrollbars="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="fill_parent"                      
        android:orientation="vertical"
        android:id="@+id/linearLayout1" 
        android:layout_height="wrap_content"  
        
       >

        <TextView
            android:id="@+id/admissioncrihd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admissionheading"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:scrollbars = "vertical"
             android:layout_marginTop="15dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
        
     <TextView
    android:id="@+id/admissioncritext"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:textColor="#FFFFFF"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:scrollbars = "vertical"
    android:text="@string/admissioncritext" />
      <TextView
            android:id="@+id/adsndhdid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adsndhd"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:scrollbars = "vertical"
             android:layout_marginTop="15dp"
             />
      <TextView
            android:id="@+id/adsndhdid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adsndhd1"
            android:textColor="#FFFFFF"
            android:scrollbars = "vertical"
             android:layout_marginTop="15dp"
            
             />
       <TextView
    android:id="@+id/admissioncritext2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:textColor="#FFFFFF"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:scrollbars = "vertical"
    android:text="@string/admissioncritext2" />
       
</LinearLayout>
</ScrollView>
</LinearLayout>