<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_background121"
    android:orientation="vertical"
    android:padding="20dp" >
     <TextView
        android:id="@+id/welcometexttv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/options"
       
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
      <Button
        android:id="@+id/enterinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:drawableStart="@drawable/i"
        android:text="@string/enterinfo"
         android:padding="13dp" 
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:drawableStart="@drawable/v"
        android:text="@string/visit"
         android:padding="13dp" 
        android:textColor="#FFFFFF" />
     
    
</LinearLayout>